@@ -70,10 +70,8 @@ Sequence_Consumer_CPPFLAGS = \
 Sequence_Consumer_SOURCES = \
   Notify_Sequence_Push_Consumer.cpp \
   Sequence_Consumer.cpp \
-  common.cpp \
   goC.cpp \
-  Notify_Sequence_Push_Consumer.h \
-  common.h
+  Notify_Sequence_Push_Consumer.h
 
 Sequence_Consumer_LDADD = \
   $(TAO_BUILDDIR)/orbsvcs/tests/Notify/lib/libTAO_NotifyTests.la \
@@ -123,8 +121,7 @@ Sequence_Supplier_SOURCES = \
   goC.cpp \
   goS.cpp \
   Notify_Sequence_Push_Consumer.h \
-  Notify_Structured_Push_Consumer.h \
-  common.h
+  Notify_Structured_Push_Consumer.h
 
 Sequence_Supplier_LDADD = \
   $(TAO_BUILDDIR)/orbsvcs/tests/Notify/lib/libTAO_NotifyTests.la \
@@ -174,7 +171,6 @@ Structured_Consumer_SOURCES = \
   Structured_Consumer.cpp \
   goC.cpp \
   Notify_Structured_Push_Consumer.h
-
 
 Structured_Consumer_LDADD = \
   $(TAO_BUILDDIR)/orbsvcs/tests/Notify/lib/libTAO_NotifyTests.la \
