@@ -73,7 +73,6 @@ Sequence_Consumer_SOURCES = \
   goC.cpp \
   Notify_Sequence_Push_Consumer.h
 
-
 Sequence_Consumer_LDADD = \
   $(TAO_BUILDDIR)/orbsvcs/tests/Notify/lib/libTAO_NotifyTests.la \
   $(TAO_BUILDDIR)/orbsvcs/orbsvcs/libTAO_CosEvent_Serv.la \
