@@ -173,10 +173,8 @@ Structured_Consumer_CPPFLAGS = \
 Structured_Consumer_SOURCES = \
   Notify_Structured_Push_Consumer.cpp \
   Structured_Consumer.cpp \
-  common.cpp \
   goC.cpp \
-  Notify_Structured_Push_Consumer.h \
-  common.h
+  Notify_Structured_Push_Consumer.h
 
 Structured_Consumer_LDADD = \
   $(TAO_BUILDDIR)/orbsvcs/tests/Notify/lib/libTAO_NotifyTests.la \
@@ -226,8 +224,7 @@ Structured_Supplier_SOURCES = \
   goC.cpp \
   goS.cpp \
   Notify_Sequence_Push_Consumer.h \
-  Notify_Structured_Push_Consumer.h \
-  common.h
+  Notify_Structured_Push_Consumer.h
 
 Structured_Supplier_LDADD = \
   $(TAO_BUILDDIR)/orbsvcs/tests/Notify/lib/libTAO_NotifyTests.la \
